--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Learn TS</title>
-    <script src="app.js"></script>
+    <script defer src="dist/app.js"></script>
     <style>
-        * {
-            background-color: #000;
-        }
-    </style>
-</head>
-<body>
-    <div id="logger">
+      * {
+        background-color: #000;
+        font: white;
+      }
 
-    </div>
-</body>
+      button {
+        background-color: #fff;
+        cursor: pointer;
+      }
+    </style>
+  </head>
+  <body>
+    <button>Click me</button>
+  </body>
 </html>
