--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     </style>
   </head>
   <body>
+    <input type="text" id="user-intput" />
+    <p id="message-output"></p>
     <button>Click me</button>
   </body>
 </html>
