--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>ProjectManager</title>
+    <title>Google Map TS</title>
+    <script type="text/javascript" src="dist/bundle.js" defer></script>
     <link rel="stylesheet" href="app.css" />
-    <script type="module" src="dist/app.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div id="map">
+      <p>Please enter an adddress</p>
+    </div>
+    <form action="">
+      <input type="text" id="address" />
+      <button type="submit">SEARCH ADDRESS</button>
+    </form>
+  </body>
 </html>
